tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:51:39: error: request for member ‘len’ in something not a structure or union
   51 |   list_int tmp2 = list_int_create(tmp1.len);
      |                                       ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:53:33: error: request for member ‘len’ in something not a structure or union
   53 |   for (int tmp4 = 0; tmp4 < tmp1.len; tmp4++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:54:17: error: request for member ‘data’ in something not a structure or union
   54 |     int x = tmp1.data[tmp4];
      |                 ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:66:21: error: expected ‘)’ before ‘in’
   66 |   printf("%d\n", "a" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:66:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   66 |   printf("%d\n", "a" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:67:21: error: expected ‘)’ before ‘in’
   67 |   printf("%d\n", "b" in m);
      |         ~           ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:67:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   67 |   printf("%d\n", "b" in m);
      |           ~^     ~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
